--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -2,6 +2,7 @@
   margin: auto;
   max-width: 50%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 1rem;
