--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -5,7 +5,8 @@
   text-align: center;
   text-decoration: none;
   border: none;
-  padding: 0.5em 2em;
+  padding: 0.5rem 2rem;
+  margin: auto;
 }
 
 .button.centered {
