--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,3 +1,11 @@
+.main-container {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 100px; /* height of your footer */
+}
+
 .container {
   margin: auto;
   max-width: 50%;
@@ -22,6 +30,7 @@
 
 .menu.container {
   background-color: black;
+  padding: 2rem;
 }
 
 .fluid.container {
