got scroll to bottom to work

--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -31,6 +31,8 @@
 .menu.container {
   background-color: black;
   padding: 2rem;
+  position: sticky !important;
+  top: 0 !important;
 }
 
 .fluid.container {
