--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,8 @@ code {
 
 div.sticky-top {
   position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
+  position: sticky !important;
+  top: 0 !important;
 }
 
 footer {
