--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -6,7 +6,7 @@
   text-decoration: none;
   border: none;
   padding: 0.5rem 2rem;
-  margin: auto;
+  margin: 0.5rem;
 }
 
 .button.centered {
@@ -14,6 +14,10 @@
   left: 50%;
   transform: translateX(-50%);
 }
+
+/* .button.centered {
+  display: inline-block;
+} */
 
 button:disabled,
 button[disabled] {
