--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,14 +1,14 @@
 .main-container {
-  min-height: 100vh; /* will cover the 100% of viewport */
+  min-height: 100vh;
   overflow: hidden;
   display: block;
   position: relative;
-  padding-bottom: 0px; /* height of your footer */
+  padding-bottom: 0px;
 }
 
 .container {
   margin: auto;
-  max-width: 50%;
+  max-width: 60%;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -19,20 +19,39 @@
 
 .message.container {
   background-color: #f8f8f9;
-  border-color: black;
+  /* border-color: black;
   border-style: solid;
   border-radius: 25px;
-  border-color: #6c6c6c;
+  border-color: #6c6c6c; */
   max-width: 85%;
   border-width: thin;
   color: #6c6c6c;
 }
 
 .menu.container {
+  width: 100%;
+  min-height: 5vh;
   background-color: black;
   padding: 2rem;
-  position: sticky !important;
-  top: 0 !important;
+  flex: 0 1 auto;
+}
+
+.user-info.container {
+  background-color: white;
+  border-bottom: 0.2rem solid #f8f8f9;
+}
+
+.footer.container {
+  width: 100%;
+  min-height: 5vh;
+  flex: 0 1 40px;
+  background-color: black;
+  padding: 2rem;
+  height: 100%;
+}
+
+.content.container {
+  min-height: 90vh;
 }
 
 .fluid.container {
@@ -44,30 +63,3 @@
   top: 0;
   border-bottom: solid #6c6c6c;
 }
-
-.grid {
-  padding: 1rem;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1.2fr);
-  grid-auto-rows: 45%;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-}
-
-/* .inline.container {
-  display: inline-flex;
-} */
-
-/* .right.container {
-  text-align: right;
-}
-
-.left.container {
-  text-align: left;
-}
-
-.justified.container {
-  text-align: justify;
-}
-*/
