--- a/src/scenes/followerList/components/MouseOverAvatar/MouseOverAvatar.css
+++ b/src/scenes/followerList/components/MouseOverAvatar/MouseOverAvatar.css
@@ -1,3 +1,12 @@
+/* .follower-container {
+  position: relative;
+  width: 50%;
+  padding: 1rem;
+} */
+
+/* .follower {
+  position: relative;
+} */
 .button.absolute {
   position: absolute;
   top: 50%;
@@ -8,13 +17,25 @@
 
 div.avatar-container {
   position: relative;
-  width: 9rem;
-  height: auto;
   padding: 0.1rem;
   flex: 1 0 15%;
 }
 
 img.avatar {
   border-radius: 50%;
-  max-width: 8.5rem;
+  max-width: 3.5rem;
+  /* min-width: 25%; */
+  /* height: auto; */
+}
+
+@media only screen and (min-height: 1080px) and (max-height: 1439px) {
+  img.avatar {
+    max-width: 8.5rem;
+  }
+}
+
+@media only screen and (min-height: 1440px) {
+  img.avatar {
+    max-width: 11.5rem;
+  }
 }
